[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = ""
authors = ["Jessica Araujo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
